client/src/App.css
body {
  margin: 0;
  background-color: #530a1a;
  font-family: "Roboto", sans-serif;
  cursor: default;
  height: 100%;
}

header {
  display: flex;
  flex-direction: column;
  display: unset
}

::-webkit-scrollbar {
  width: 20px;
  cursor: pointer !important;
}

::-webkit-scrollbar-track {
  background: #530a1a;
}

::-webkit-scrollbar-thumb {
  background: #ffffff;
  height: 90px;
  border: 1px solid black;
  border-radius: 8px;
}

::-webkit-scrollbar-thumb:hover {
  background: #9e0c2b;
  cursor: pointer !important;
}
::-webkit-scrollbar-corner {
  color: #e5890a;
}

.App {
  text-align: center;
  /* background-color: #162f36; */
  /* background-color: #e5890a; */
  margin: 0;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.home-container {
  /* background-color: #530a1a; */
  background-image: url("../src/images/hogwarts-legacy-desktop.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 100vh;
}

.home-container a {
  text-decoration: none;
}
.home-container :visited {
  color: white;
}
.home-container a:hover{
  color: #032d33;
}

.home-image { 
  display: flex;
  margin: 0 auto;
  width: 50%;
  max-width: 300px;
  flex-wrap: wrap;
  border-radius: 12px;
  border: 2px solid #530a1a;
}

.credits-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  padding-top: 1.5rem;
  padding-bottom: 1rem;
}

.credits {
  color: white;
  font-size: 3rem;
  width: 180px;
  padding-bottom: 1rem;
  border-bottom: 1px solid white;
  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
  0px 18px 23px rgba(0, 0, 0, 0.1);
}

.credits-desc {
  font-size: 1.8rem;
  color: white;
  padding-bottom: 1rem;
  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
  0px 18px 23px rgba(0, 0, 0, 0.1);
}


.contact-desc {
  color: white;
  font-size: 1.8rem;
  /* margin-bottom: 3rem; */
  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
  0px 18px 23px rgba(0, 0, 0, 0.1);
}

.contact {
  color: white;
  font-size: 3rem;
  width: 180px;
  padding-bottom: 1rem;
  border-bottom: 1px solid white;
  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
  0px 18px 23px rgba(0, 0, 0, 0.1);
}

.contact-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  /* padding-top: 2rem; */
}

.home-h1 {
  font-size: 1.6rem;
  padding: 2rem 0 2rem;
}

.home-firstP {
  margin: 0 auto;
  max-width: 60%;
  color: white;
  padding: 2rem;
  line-height: 1.7rem;
}

h1 {
  font-size: 1.7rem;
  margin: 0;
  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1);
  -webkit-text-fill-color: white;
}

/* a,
a:link,
a:active {
  text-decoration: none;
} */

.brand {
  color: white;
  text-decoration: none;
  margin-left: 0.5rem;
  white-space: nowrap;
}

.navBarContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #6e091f;
  min-height: 66px;
  position: sticky;
  top: 0;
  /* width: 100vw; */
  z-index: 2;
  border-bottom: 5px solid #530a1a;
}

.navBar {
  /* display: flex;
  justify-content: space-between; */
  /* align-items: center; */
  position: fixed;
  right: 10px;
  margin-right: 0.7rem;
  white-space: nowrap;
}
.hamburgerButton {
  display: none;
  margin-right: 2rem;
  transform: scale(1.3);
  border: 1px solid black;
  border-radius: 5px;
  background: #530a1a;
}

.button-top-scroll {
  position: fixed;
  bottom: 20px;
  right: 20px;
}

.linkNav {
  text-decoration: none;
  color: white;
  padding: 1rem;
  transition: transform 1s;
  transform: scale(0.8);
  font-size: 1.6rem;
  border-radius: 5px;
  cursor: pointer;
  /* white-space: nowrap; */
}

.linkNav:hover {
  background-color: #9e0c2b;
  transform: scale(1);
  cursor: pointer;
}

.search-box {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem;
}

.search-bar {
  min-width: 33%;
  border: 4px solid #6e091f;
  border-radius: 5px;
  height: 50px;
  font-size: 2rem;
  text-align: center;
  outline: 0;
  transition: transform 2s;
  transform: scale(0.8);
}

.search-bar:hover,
:focus {
  transform: scale(1);
}

.cardBox {
  min-height: 100%;
  width: 90%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
}

.cardBox > div {
  /* flex-basis: calc(30% - 200px); */
  flex-basis: 30%;
}

.uniCard {
  display: flex;
  flex-direction: column;
  color: white;
  background-color: #032d33;
  /* background-color: #6e091f; */
  min-width: 17rem;
  max-width: 17rem;
  min-height: 330px;
  border: 2px solid #03252b;
  border-radius: 0px 12px 0px 12px;
  margin: 1rem;
  /* transform: scale(1);
  transition: transform 2s; */
  /* box-shadow: 6px 6px; */
}

/* Custom borders */
/* .cardDesc::before {
  content:'';
  position: relative;
  background-color: #6e091f;
  width: 1.5rem;
  height: 3px;
  bottom: -113px;
  right: 32px;
  border-bottom:1px solid magenta; 
}

.cardDesc::after {
  content:'';
  position: relative;
  background-color: #6e091f;
  width: 3px;
  height: 1.5rem;
  bottom: -15px;
  right: 32px;
}


.cardCharName::before {
  
  content:'';
  position: absolute;
  background-color: #6e091f;
  width:  1.5rem;
  height: 3px;
  top: 5px;
  left: 5px;
}
.cardCharName::after {
  content:'';
  position: absolute;
  background-color: #6e091f;
  width: 3px;
  height:  1.5rem;
  top: 5px;
  left: 5px;
} */
/* Custom borders */


.uniCard:hover > .cardCharImage {
  border: 5px solid #6e091f;
  background-color: #6e091f;
  padding: 0px;
  
}

.cardDesc::before {
  content:'';
  position: absolute;
  background-color: #6e091f;
  width: 50%;
  height: 2px;
  bottom: 10px;
  left:25%;
}
.cardCharImage {
  max-width: 10rem;
  max-height: 10rem;
  border-radius: 50%;
  padding: 5px;
  align-self: center;
}

.cardCharName {
  font-size: 120%;
  margin-bottom: 10px;
  padding: 0px 0.5rem;
  max-height: 32px;
  /* text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1); */
  align-self: center;
}
.cardDesc {
  position: relative;
  font-size: 1.1rem;
  padding: 0 0.5rem 1.5rem;
  margin-top: 20px;
  min-width: 210px;
  /* box-shadow: 0px -24px 3px -24px white; */
  align-self: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

.cardDesc > p {
  margin: 0.1rem;
  /* border: 1px solid black;
  border-radius: 10px 100px / 120px; */
}

.cardCharCrest {
  max-width: 6rem;
  margin: 0 auto;
  /* max-height: 10rem; */
}
/* 
@media only screen and (max-height: 850px) {
  .home-container {
    height: 100vh;
  }
} */

@media only screen and (max-width: 595px) {
  .credits {
    font-size: 2.5rem;
  }

  .credits-desc {
    font-size: 1.5rem;
  }

  .contact {
    font-size: 2.5rem;
  }

  .contact-desc {
    font-size: 1.5rem;
  }
}

@media only screen and (max-width: 950px) {
  .linkNav {
    font-size: 1.4rem;
  }
}



@media only screen and (max-width: 875px) {
  .navBar {
    display: none;
  }

  .hamburgerButton {
    display: flex;
    transform: scale(1.3);
    border: 1px solid black;
    border-radius: 5px;
  }

  .linkNav {
    padding: 0;
    text-align: center;
    padding: 0.5rem;
    background-color: #9e0c2b;
    border: 1px solid black;
    font-size: 1.6rem;
  }

  #move {
    display: flex;
    flex-direction: column;
    padding-bottom: 0.8rem;
  }
  #hideButton {
    visibility: hidden;
  }

  #hidden {
    position: absolute;
    top: 66px;
    right: 7px;
    height: auto;
    width: 80px;
    /* background-color: #6e091f; */
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-right: 1rem;
    z-index: 1;
    /* border-bottom: 1px solid black; */
    white-space: nowrap;
  }
}

/*  HOUSES PAGES   */

.container-container {
  position: absolute;
  top: 25%;
  left: 10%;
}

.houses-container {
  width: 80vw;
  height: 50vh;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.houses {
  min-width: 20rem;
  min-height: 30rem;
  display: flex;
  justify-content: center;
  text-align: center;
  color: white;
  margin: 2rem;
}

.houses:hover {
  cursor: pointer;
}

.gryffindor {
  background-color: #e0a911;
  border: 7px solid rgb(255, 123, 0);
  color: rgb(255, 123, 0);
}

.slytherin {
  background-color: #2a623d;
  border: 7px solid rgb(200, 255, 0);
  color: rgb(200, 255, 0);
}

.hufflepuff {
  background-color: #ffdb00;
  border: 7px solid rgb(0, 81, 255);
  color: rgb(0, 81, 255);
}

.ravenclaw {
  background-color: #222f5b;
  border: 7px solid rgb(119, 0, 255);
  color: rgb(119, 0, 255);
}

